[gd_scene load_steps=22 format=3 uid="uid://c8lopr53mkftt"]

[ext_resource type="Script" path="res://scripts/tower.gd" id="1_8f7lg"]
[ext_resource type="Texture2D" uid="uid://bnv4k16o00l40" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/skelet_idle_anim_f0.png" id="2_j1xmf"]
[ext_resource type="Texture2D" uid="uid://bniy4fhepntpw" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/skelet_idle_anim_f1.png" id="3_dd64v"]
[ext_resource type="Texture2D" uid="uid://6721ltahsl4h" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/skelet_idle_anim_f2.png" id="4_ffo3w"]
[ext_resource type="Texture2D" uid="uid://b6u131gy6i02d" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/skelet_idle_anim_f3.png" id="5_cbf2o"]
[ext_resource type="Texture2D" uid="uid://be3dyea5suhq7" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/weapon_bow.png" id="6_7hx3y"]
[ext_resource type="Texture2D" uid="uid://wriqsji8f51i" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/lizard_m_idle_anim_f0.png" id="7_cg7eu"]
[ext_resource type="Texture2D" uid="uid://bfm48qlfm12hw" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/ogre_idle_anim_f0.png" id="7_uxih6"]
[ext_resource type="Texture2D" uid="uid://bt8uj8pp1tmkx" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/lizard_m_idle_anim_f1.png" id="8_nj436"]
[ext_resource type="Texture2D" uid="uid://cbpjjclkfgboy" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/ogre_idle_anim_f1.png" id="8_pingr"]
[ext_resource type="Texture2D" uid="uid://nabanlr8yf8y" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/ogre_idle_anim_f2.png" id="9_0i3ji"]
[ext_resource type="Texture2D" uid="uid://cc1fasb6igr8i" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/lizard_m_idle_anim_f2.png" id="9_e27pr"]
[ext_resource type="Texture2D" uid="uid://bm8w64ahi6abm" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/ogre_idle_anim_f3.png" id="10_cg1jy"]
[ext_resource type="Texture2D" uid="uid://bfg277pi46wi3" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/lizard_m_idle_anim_f3.png" id="10_hmbyv"]
[ext_resource type="Texture2D" uid="uid://dfp0sphemlnl5" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/weapon_knife.png" id="11_uf225"]
[ext_resource type="Texture2D" uid="uid://cusq0bbptvip" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/weapon_double_axe.png" id="11_yhl44"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ryxre"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_okg6p"]
radius = 17.5

[sub_resource type="SpriteFrames" id="SpriteFrames_cbiaf"]
animations = [{
"frames": [{
"duration": 2.5,
"texture": ExtResource("2_j1xmf")
}, {
"duration": 2.5,
"texture": ExtResource("3_dd64v")
}, {
"duration": 2.5,
"texture": ExtResource("4_ffo3w")
}, {
"duration": 2.5,
"texture": ExtResource("5_cbf2o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_3bii2"]
animations = [{
"frames": [{
"duration": 2.5,
"texture": ExtResource("7_cg7eu")
}, {
"duration": 2.5,
"texture": ExtResource("8_nj436")
}, {
"duration": 2.5,
"texture": ExtResource("9_e27pr")
}, {
"duration": 2.5,
"texture": ExtResource("10_hmbyv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_xqawm"]
animations = [{
"frames": [{
"duration": 2.5,
"texture": ExtResource("7_uxih6")
}, {
"duration": 2.5,
"texture": ExtResource("8_pingr")
}, {
"duration": 2.5,
"texture": ExtResource("9_0i3ji")
}, {
"duration": 2.5,
"texture": ExtResource("10_cg1jy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Tower" type="Area2D"]
script = ExtResource("1_8f7lg")

[node name="Detection Shape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ryxre")

[node name="Bounding Shape" type="Area2D" parent="." groups=["unclickable"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounding Shape"]
shape = SubResource("CircleShape2D_okg6p")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Skeleton" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_cbiaf")
frame_progress = 0.140251

[node name="Bow" type="Sprite2D" parent="Skeleton"]
position = Vector2(6, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_7hx3y")

[node name="Lizard" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(-2.98023e-08, -5)
scale = Vector2(0.9375, 0.9375)
sprite_frames = SubResource("SpriteFrames_3bii2")
frame_progress = 0.508637

[node name="Knife" type="Sprite2D" parent="Lizard"]
position = Vector2(10.6667, 3.2)
texture = ExtResource("11_uf225")

[node name="Ogre" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -5)
scale = Vector2(0.898437, 0.898437)
sprite_frames = SubResource("SpriteFrames_xqawm")
frame_progress = 0.494474

[node name="Battle Axe" type="Sprite2D" parent="Ogre"]
position = Vector2(16.3404, 2.7234)
texture = ExtResource("11_yhl44")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="Bounding Shape" to="." method="_on_bounding_shape_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
